--- a/src/interacting_with_api_explore.ipynb
+++ b/src/interacting_with_api_explore.ipynb
@@ -4,12 +4,20 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# Explore here"
+                "# Interacting with api explore. \n",
+                "En este proyecto se buscará explorar el uso de apis, así como los métodos de python para su manipulación."
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Paso 1. Variables de entorno"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -20,13 +28,16 @@
                 "\n",
                 "# load the .env file variables\n",
                 "load_dotenv()\n",
-                "\n"
+                "\n",
+                "# Obtener credenciales\n",
+                "client_id = os.environ.get(\"CLIENT_ID\")\n",
+                "client_secret = os.environ.get(\"CLIENT_SECRET\")"
             ]
         }
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3.8.13 64-bit ('3.8.13')",
+            "display_name": "Python 3",
             "language": "python",
             "name": "python3"
         },
@@ -40,14 +51,9 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.8.13"
+            "version": "3.11.4"
         },
-        "orig_nbformat": 4,
-        "vscode": {
-            "interpreter": {
-                "hash": "110cc1dee26208153f2972f08a2ad52b6a56238dc66d48e87fb757ef2996db56"
-            }
-        }
+        "orig_nbformat": 4
     },
     "nbformat": 4,
     "nbformat_minor": 2
