added info tracks array

--- a/src/interacting_with_api_explore.ipynb
+++ b/src/interacting_with_api_explore.ipynb
@@ -17,7 +17,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 10,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -45,7 +45,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 11,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -56,7 +56,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 12,
+            "execution_count": 5,
             "metadata": {},
             "outputs": [
                 {
@@ -64,31 +64,29 @@
                     "output_type": "stream",
                     "text": [
                         "Found Artist: The Doors\n",
-                        "Riders on the Storm - https://open.spotify.com/track/14XWXWv5FoCbFzLksawpEe\n",
-                        "People Are Strange - https://open.spotify.com/track/1Jmqubf9kGkWeYQXQKImL5\n",
-                        "Roadhouse Blues - https://open.spotify.com/track/1Q5kgpp4pmyGqPwNBzkSrw\n",
-                        "Break on Through (To the Other Side) - https://open.spotify.com/track/6ToM0uwxtPKo9CMpbPGYvM\n",
-                        "Light My Fire - https://open.spotify.com/track/5uvosCdMlFdTXhoazkTI5R\n",
-                        "Love Her Madly - https://open.spotify.com/track/3MFFDRC4wTN9JNGtzXsZlN\n",
-                        "Love Me Two Times - https://open.spotify.com/track/67HxeUADW4H3ERfaPW59ma\n",
-                        "Soul Kitchen - https://open.spotify.com/track/2Xdc6qyaFBJZ8QW1KhpVci\n",
-                        "Peace Frog - https://open.spotify.com/track/5piJiL6aRhvrKBa9YuEfS9\n",
-                        "Touch Me - https://open.spotify.com/track/4BVE5tIIpYabZcYCbephNW\n"
+                        "[{'name': 'Riders on the Storm', 'popularity': 77, 'duration': 434720}, {'name': 'People Are Strange', 'popularity': 76, 'duration': 130173}, {'name': 'Roadhouse Blues', 'popularity': 75, 'duration': 243826}, {'name': 'Break on Through (To the Other Side)', 'popularity': 74, 'duration': 145866}, {'name': 'Light My Fire', 'popularity': 73, 'duration': 429760}, {'name': 'Love Her Madly', 'popularity': 71, 'duration': 198466}, {'name': 'Love Me Two Times', 'popularity': 68, 'duration': 195106}, {'name': 'Soul Kitchen', 'popularity': 69, 'duration': 213000}, {'name': 'Peace Frog', 'popularity': 69, 'duration': 170132}, {'name': 'Touch Me', 'popularity': 68, 'duration': 190253}]\n"
                     ]
                 }
             ],
             "source": [
-                "# Search for an artist\n",
+                "# Buscar artista\n",
                 "artist_name = \"The Doors\"\n",
                 "results = sp.search(q=f\"artist:{artist_name}\", type='artist')\n",
                 "artist = results['artists']['items'][0]\n",
                 "artist_id = artist['id']\n",
                 "print(f\"Found Artist: {artist['name']}\")\n",
                 "\n",
-                "# Get top tracks\n",
+                "# Obtener tracks\n",
                 "top_tracks = sp.artist_top_tracks(artist_id)\n",
+                "info_tracks = []\n",
                 "for track in top_tracks['tracks']:\n",
-                "    print(f\"{track['name']} - {track['external_urls']['spotify']}\")"
+                "    #print(track)\n",
+                "    info_tracks.append({\n",
+                "        \"name\" : track['name'],\n",
+                "        \"popularity\" : track['popularity'],\n",
+                "        \"duration\" : track['duration_ms']\n",
+                "    })\n",
+                "print(f\"{info_tracks}\")"
             ]
         }
     ],
