added pandas dataframe

--- a/src/interacting_with_api_explore.ipynb
+++ b/src/interacting_with_api_explore.ipynb
@@ -55,6 +55,13 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Paso 3. Realizar solicitud a la API"
+            ]
+        },
+        {
             "cell_type": "code",
             "execution_count": 5,
             "metadata": {},
@@ -87,6 +94,98 @@
                 "        \"duration\" : track['duration_ms']\n",
                 "    })\n",
                 "print(f\"{info_tracks}\")"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Paso 4. Transformar a pandas DataFrame"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 6,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/html": [
+                            "<div>\n",
+                            "<style scoped>\n",
+                            "    .dataframe tbody tr th:only-of-type {\n",
+                            "        vertical-align: middle;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe tbody tr th {\n",
+                            "        vertical-align: top;\n",
+                            "    }\n",
+                            "\n",
+                            "    .dataframe thead th {\n",
+                            "        text-align: right;\n",
+                            "    }\n",
+                            "</style>\n",
+                            "<table border=\"1\" class=\"dataframe\">\n",
+                            "  <thead>\n",
+                            "    <tr style=\"text-align: right;\">\n",
+                            "      <th></th>\n",
+                            "      <th>name</th>\n",
+                            "      <th>popularity</th>\n",
+                            "      <th>duration</th>\n",
+                            "    </tr>\n",
+                            "  </thead>\n",
+                            "  <tbody>\n",
+                            "    <tr>\n",
+                            "      <th>0</th>\n",
+                            "      <td>Riders on the Storm</td>\n",
+                            "      <td>77</td>\n",
+                            "      <td>434720</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>1</th>\n",
+                            "      <td>People Are Strange</td>\n",
+                            "      <td>76</td>\n",
+                            "      <td>130173</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>2</th>\n",
+                            "      <td>Roadhouse Blues</td>\n",
+                            "      <td>75</td>\n",
+                            "      <td>243826</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>3</th>\n",
+                            "      <td>Break on Through (To the Other Side)</td>\n",
+                            "      <td>74</td>\n",
+                            "      <td>145866</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>4</th>\n",
+                            "      <td>Light My Fire</td>\n",
+                            "      <td>73</td>\n",
+                            "      <td>429760</td>\n",
+                            "    </tr>\n",
+                            "  </tbody>\n",
+                            "</table>\n",
+                            "</div>"
+                        ],
+                        "text/plain": [
+                            "                                   name  popularity  duration\n",
+                            "0                   Riders on the Storm          77    434720\n",
+                            "1                    People Are Strange          76    130173\n",
+                            "2                       Roadhouse Blues          75    243826\n",
+                            "3  Break on Through (To the Other Side)          74    145866\n",
+                            "4                         Light My Fire          73    429760"
+                        ]
+                    },
+                    "execution_count": 6,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "df = pd.DataFrame(info_tracks)\n",
+                "df.head()"
             ]
         }
     ],
